[gd_scene load_steps=7 format=3 uid="uid://b426grh2owue7"]

[ext_resource type="Texture2D" uid="uid://m1ulxsej3gw7" path="res://Assets/Sprites/enemies/Onyx_demon.png" id="1_7qtnb"]
[ext_resource type="Script" path="res://Scripts/pet/void_orb_friendly.gd" id="1_t32od"]

[sub_resource type="AtlasTexture" id="AtlasTexture_23nqt"]
atlas = ExtResource("1_7qtnb")
region = Rect2(368, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_0wt5k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_23nqt")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_hj7wp"]
radius = 5.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_r8cxj"]
radius = 2.0
height = 16.0

[node name="void_orb_friendly" type="Area2D"]
z_index = 1
collision_layer = 4
collision_mask = 5
script = ExtResource("1_t32od")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(0.815686, 1, 1, 1)
sprite_frames = SubResource("SpriteFrames_0wt5k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_hj7wp")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_r8cxj")

[node name="immunity_timer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="lifetime_timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="immunity_timer" to="." method="_on_immunity_timer_timeout"]
[connection signal="timeout" from="lifetime_timer" to="." method="_on_lifetime_timer_timeout"]
